# 42_TaskMaster

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: clang-format.yml
include/client/: Client.hpp  TaskmasterCtl.hpp  UnixSocketClient.hpp  client.hpp
include/common/: CommandManager.hpp  Logger.hpp  UnixSocket.hpp  utils.hpp
include/common/socket/: Socket.hpp  UnixSocket.hpp
include/server/: ClientSession.hpp  Config.hpp  ConfigParser.hpp  PollFds.hpp  Process.hpp  ProcessGroup.hpp  ProcessPool.hpp  TaskManager.hpp  Taskmaster.hpp  UnixSocketServer.hpp
include/server/config/: Config.hpp  ProgramConfig.hpp  WordexpWrapper.hpp
src/client/: CMakeLists.txt  Client.cpp  TaskmasterCtl.cpp  UnixSocketClient.cpp  main.cpp
src/common/: CMakeLists.txt  CommandManager.cpp  Logger.cpp  UnixSocket.cpp  split.cpp
src/common/socket/: Socket.cpp  UnixSocket.cpp
src/common/utils/: join.cpp
src/server/: CMakeLists.txt  ClientSession.cpp  Config.cpp  ConfigParser.cpp  PollFds.cpp  Process.cpp  ProcessGroup.cpp  ProcessPool.cpp  TaskManager.cpp  Taskmaster.cpp  UnixSocketServer.cpp  main.cpp
src/server/config/: Config.cpp  ProgramConfig.cpp  WordexpWrapper.cpp
test/: test.mk
test/conf/: autorestart.yaml  autostart.yaml  cmd.yaml  env.yaml  exitcodes.yaml  numprocs.yaml  startretries.yaml  starttime.yaml  stopsignal.yaml  umask.yaml  workingdir.yaml
test/src/: autorestart_unexpected.c  stopsignal.c
